# COMP9417-Group-Project

./: .gitignore  README.md  download_data.py  main.py  mlp_cv.ipynb  pyproject.toml  run_full_benchmark.sh  train_xgboost.py  tune_xgboost.py  tune_xrfm.py
experiments/: analyse_agops.py  compare_feature_importance.py  scaling_vs_n.py  tune_mlp.py  tune_random_forest.py  tune_xgboost.py  tune_xrfm.py  view_agops.py
results/: benchmark_log.csv  feature_importance_comparison_Regression_Mixed.csv  scaling_vs_n_Regression_n_gt_10k.csv  tuning_mlp.txt  tuning_xgboost.txt  xgboost_output.txt
results/agops/: Classification_Mixed.pt  Classification_d_gt_50.pt  Classification_n_gt_10k.pt  Regression_Mixed.pt  Regression_d_gt_50.pt  Regression_n_gt_10k.pt
results/run_logs/: run_mlp.txt  run_randomforest.txt  run_scaling_fillin.txt  run_scaling_vs_n.txt  run_xgboost.txt  run_xrfm.txt
src/: data_processor.py  evaluator.py
src/models/: base_model.py  mlp.py  random_forest.py  tabnet.py  xgboost.py  xrfm.py
tuned_params/mlp/: Classification_Mixed.json  Classification_d_gt_50.json  Classification_n_gt_10k.json  Regression_Mixed.json  Regression_d_gt_50.json  Regression_n_gt_10k.json
tuned_params/random_forest/: Classification_Mixed.json  Classification_d_gt_50.json  Classification_n_gt_10k.json  Regression_Mixed.json  Regression_d_gt_50.json  Regression_n_gt_10k.json
tuned_params/xgboost/: Classification_Mixed.json  Classification_d_gt_50.json  Classification_n_gt_10k.json  Regression_Mixed.json  Regression_d_gt_50.json  Regression_n_gt_10k.json
tuned_params/xrfm/: Classification_Mixed.json  Classification_d_gt_50.json  Classification_n_gt_10k.json  Regression_Mixed.json  Regression_d_gt_50.json  Regression_n_gt_10k.json
