[project]
name = "comp9417-group-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "kaggle>=2.0.1",
    "pandas>=3.0.2",
    "python-dotenv>=1.2.2",
    "pytorch-tabnet>=4.1.0",
    "scikit-learn>=1.8.0",
    "tabpfn>=7.1.1",
    "torch>=2.11.0",
    "xgboost>=3.2.0",
    "xrfm>=0.4.3",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
