[project]
name = "comp9417-group-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "kaggle>=2.0.1",
    "pandas>=3.0.2",
    "python-dotenv>=1.0",
    "pytorch-tabnet>=4.1.0",
    "scikit-learn>=1.5",
    "tabpfn>=2.0",
    "torch>=2.1.0",
    "xgboost>=2.0",
    "xrfm>=0.4.3",
    "ipykernel>=6.29",
    "jupyter>=1.0",
    "imbalanced-learn>=0.14.1",
]

[tool.uv.sources]
torch = [
    { index = 'pytorch-cu130', marker = "sys_platform == 'linux' or sys_platform == 'win_32'" },
]

[[tool.uv.index]]
name = 'pytorch-cu130'
url = "https://download.pytorch.org/whl/cu130"
explicit = true